# machinelearning

./: .gitignore  README.md  docusaurus.config.js  mlx-examples.ipynb  mlx-fine-tunning-gemma3.ipynb  mlx-fine-tunning.ipynb  mlx-optimization.ipynb  package-lock.json  sidebars.js
.devcontainer/: devcontainer.json
docs/: mlx-examples.md
gemma2-finetunning/: unsloth-fine-tunning-gemma2.ipynb
gemma3-finetunning/: ev.py  inference.py  main.py  mlx-fine-tunning-gemma3.ipynb  models.py  pyproject.toml
