[project]
name = "gemma3-finetunning"
version = "0.1.0"
description = "ai engineer learning examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "datasets>=4.1.1",
    "huggingface-hub>=0.35.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "mlx>=0.29.1",
    "mlx-lm>=0.28.0",
]
